--- a/game1/index.html
+++ b/game1/index.html
@@ -53,4 +53,44 @@
         <script type = 'text/javascript' src="js_v9/initialization.js"></script>
         <script type = 'text/javascript' charset = 'utf-8' src = 'cordova.js'></script>
     </head>
-   
+    <body>
+        <div id="fb-root"></div>
+        <script>(function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id))
+                    return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+        <canvas id="canvas"></canvas>
+        <div id='devtools' style='z-index:3;display:none;position:absolute;left:50%;width:400px;height:400px;top:50%;margin-top:-200px;margin-left:-200px;'>
+            <h2 id = 'clickToExit' style = 'background-color:#fff;color:#000'>Click to exit</h2>
+            <textarea id ='devtoolsText' style = 'height:300px;width:400px;'></textarea>
+        </div>
+        <div class="faded overlay"></div>
+        <div id="attributions">Started by <a href="https://www.facebook.com/faris.abdelatty" target="_blank">FARIS AHMED</a>
+        </div>
+        <div id='startBtn' style='position:absolute;left:40%;top:38%;height:25%;width:25%;z-index:99999999;cursor:pointer;'></div>
+
+
+        <div class="faded overlay"></div>
+        <div id = 'pauseBtn'><div id = 'pauseBtnInner'><i class="fa fa-pause fa-2x"></i></div></div>
+        <div id = 'restartBtn'><div id = 'restartBtnInner'><i class="fa fa-refresh fa-2x"></i></div></div>
+
+        <script> (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-51272720-2', 'auto');
+            ga('send', 'pageview');</script>
+    </body>
+</html>
