--- a/0.html
+++ b/0.html
@@ -8,7 +8,7 @@
 <script src="http://code.createjs.com/tweenjs-0.6.1.min.js"></script>
 <script src="http://code.createjs.com/movieclip-0.8.1.min.js"></script>
 <script src="http://code.createjs.com/preloadjs-0.6.1.min.js"></script>
-<script src="0.js"></script>
+<script src="js/Image-Slider-LnR.js"></script>
 
 <script>
 var canvas, stage, exportRoot;
